--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,47 @@
+.text-center {
+   /* height: 100vh;con esto habilitariamos el centrado horizontal*/
+    display: flex;
+    justify-content: center; 
+    align-items: center;     
+    flex-direction: column;  
+    align-items: center;        
+  }
+#trafficTop{
+    width: 15px;
+    height: 100px;
+    background-color: #121;
+}
+
+#container{
+    width: 90px;
+    height: 250px;
+    background-color: #121;
+    border-radius: 15px;
+    box-sizing: border-box;
+    padding: 5px;
+    
+}
+
+.red, .yellow, .green {
+    height: 80px;
+    width: 80px;
+    border-radius: 50%;
+}
+
+.red{
+    background-color: #f11;
+   
+}
+.yellow{
+    background-color: rgb(250, 179, 46);  
+}
+.green{
+    background-color: #5f3;  
+}
+
+.active{
+    box-shadow: 0px 0px 30px 25px rgba(235, 235, 167, 0.904)
+}
 
 /* 
 
